--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,10 @@ cython_debug/
 # Windows artifacts
 nul
 
+# Project specific
+seo-keyword-analysis.csv
+write-homepage.js
+
 # Abstra
 # Abstra is an AI-powered process automation framework.
 # Ignore directories containing user credentials, local state, and settings.
