SEO optimization: blog updates, redirects, and new content
- Add 301 redirects for removed blog posts (flat-roof, when-roof-needs-replacement)
- Remove flat-roof-repair-jacksonville and when-roof-needs-replacement posts
- Update yellow-spots-ceiling-causes with new title and AEO formatting
- Add 1,700 sq ft case study to roof replacement cost guide
- Add featured snippet checklist to storm damage insurance post
- Create new blog posts: roofing-labor-cost-per-square, will-insurance-cover-20-year-old-roof
- Update blog post dates from Dec 2024 to Jan 2026 for freshness
- Add internal links with optimized anchor text
- Add imageAlt field to BlogPost interface for SEO-optimized alt texts
- Update nginx.conf with SEO redirects

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -15,14 +15,51 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Permissions-Policy "camera=(), microphone=(), geolocation=(self), interest-cohort=()" always;
+    add_header X-DNS-Prefetch-Control "on" always;
+    # Note: Strict-Transport-Security should be set at the load balancer/proxy level
+    # add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
 
-    # Cache static assets
-    location ~* \.(jpg|jpeg|png|gif|ico|svg|webp|woff|woff2|ttf|css|js)$ {
+    # Redirects for old URLs
+    rewrite ^/about-us$ /about permanent;
+    rewrite ^/contact-us$ /contact permanent;
+    rewrite ^/roofing-services$ /services permanent;
+    rewrite ^/siding-services$ /services permanent;
+    rewrite ^/roofing-and-siding-services-in-jacksonville-beach$ /roofing-jacksonville-beach-fl permanent;
+    rewrite ^/sitemap_index.xml$ /sitemap.xml permanent;
+    rewrite ^/roofing-st\.-augustine-fl$ /roofing-st-augustine-fl permanent;
+
+    # Old blog post redirects
+    rewrite ^/why-quality-roofing-matters-in-jacksonville-fl-trust-gimos-roofing-for-your-home$ /blog permanent;
+    rewrite ^/protect-your-home-why-choosing-professional-roofing-services-matters$ /blog permanent;
+    rewrite ^/signs-you-need-roof-repair-jacksonville$ /blog permanent;
+
+    # SEO optimized redirects - removing cannibalized/irrelevant content
+    rewrite ^/blog/when-roof-needs-replacement$ /blog/roof-repair-vs-replacement-jacksonville permanent;
+    rewrite ^/blog/flat-roof-repair-jacksonville$ /blog permanent;
+
+    # Cache static assets - 1 year for immutable assets
+    location ~* \.(jpg|jpeg|png|gif|ico|svg|webp|woff|woff2|ttf|eot|otf)$ {
         expires 1y;
-        add_header Cache-Control "public, immutable";
+        add_header Cache-Control "public, max-age=31536000, immutable";
+        add_header X-Content-Type-Options "nosniff" always;
     }
 
-    # Handle SPA routing - serve index.html for all routes
+    # Cache JS and CSS with content hash in filename - 1 year
+    location ~* \.(css|js)$ {
+        expires 1y;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+        add_header X-Content-Type-Options "nosniff" always;
+    }
+
+    # Cache HTML pages - shorter cache for dynamic content updates
+    location ~* \.html$ {
+        expires 1h;
+        add_header Cache-Control "public, max-age=3600, must-revalidate";
+        add_header X-Content-Type-Options "nosniff" always;
+    }
+
+    # Handle static site routing - try exact file, then directory, then .html extension
     location / {
         try_files $uri $uri/ $uri.html =404;
     }
